# cpp-electric-bill-calculator

./: .gitignore  BillCalculateSupport.cpp  CMakeLists.txt  DomesticBillCalculator.cpp  DomesticUnits.cpp  IndustrialBillCalculator.cpp  IndustrialUnits.cpp  Makefile  README.md  main.cpp
app/: BillCalculateSupport.cpp  DomesticBillCalculator.cpp  DomesticUnits.cpp  IndustrialBillCalculator.cpp  IndustrialUnits.cpp  main.cpp
app/include/: BillCalculateSupport.h  DomesticBillCalculator.h  DomesticUnits.h  IndustrialBillCalculator.h  IndustrialUnits.h
scripts/: Makefile
scripts/cmake/: CMakeLists.txt
